fix submissions.handler.js errors

--- a/public/css/onboarding.style.css
+++ b/public/css/onboarding.style.css
@@ -1,7 +1,7 @@
 :root {
-    --online-primary: #3498db;
+    --online-primary: #b7202e;
     --online-secondary: #2980b9;
-    --offline-primary: #e74c3c;
+    --offline-primary: #ed1c25;
     --offline-secondary: #c0392b;
     --background: #ecf0f1;
     --text-dark: #34495e;
